--- a/duration.cabal
+++ b/duration.cabal
@@ -10,13 +10,13 @@ name:                duration
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:             1.0.0.0
+version:             1.0.1.0
 
 -- A short (one-line) description of the package.
 synopsis:            A mostly type-safe Duration type
 
 -- A longer description of the package.
--- description:         
+-- description:
 
 -- The license under which the package is released.
 license:             MIT
@@ -64,13 +64,14 @@ library
                      , text-printer
 
                      , boundedn             >= 1.1.7.0
-                     , more-unicode         >= 0.0.9.0
-                     , non-empty-containers >= 1.3.0.0
-                     , number               >= 1.1.2.0
-                     , parser-plus          >= 1.0.0.0
-                     , tasty-plus           >= 1.1.0.0
-                     , tfmt                 >= 0.2.2.0
-  
+                     , more-unicode         >= 0.0.18.0
+                     , non-empty-containers >= 1.4.3.36
+                     , number               >= 1.1.2.14
+                     , parser-plus          >= 1.0.7.29
+                     , tasty-plus           >= 1.5.2.24
+                     , textual-plus         >= 1.1.4.0
+                     , tfmt                 >= 0.2.7.25
+
   -- Directories containing source files.
   hs-source-dirs:      src
 
